--- a/restaurant/package.json
+++ b/restaurant/package.json
@@ -11,6 +11,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@google/markerclustererplus": "^5.0.3",
+    "dotenv": "^10.0.0",
+    "fs": "0.0.1-security",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
